-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: jfx26
-
Component/s: javafx
-
b12
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8369716 | jfx25.0.2 | Jay Bhaskar | P2 | Resolved | Fixed | b01 |
| JDK-8376137 | jfx21.0.11 | Johan Vos | P2 | Resolved | Fixed | b01 |
| JDK-8376172 | jfx17.0.19 | Johan Vos | P2 | Resolved | Fixed | b01 |
- backported by
-
JDK-8369716 Additional WebKit 622.1 fixes from WebKitGTK 2.48.7
-
- Resolved
-
-
JDK-8376137 Additional WebKit 622.1 fixes from WebKitGTK 2.48.7
-
- Resolved
-
-
JDK-8376172 Additional WebKit 622.1 fixes from WebKitGTK 2.48.7
-
- Resolved
-
- causes
-
JDK-8370235 WebKit build fails on Windows 32-bit and Linux 32-bit after JDK-8367578
-
- Resolved
-
- relates to
-
JDK-8356982 Update WebKit to 622.1
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jfx17u/1e71ef4a
-
Commit(master)
openjdk/jfx21u/e10e5d47
-
Commit(master)
openjdk/jfx25u/46039b8c
-
Commit(master)
openjdk/jfx/adb6c11e
-
Review(master)
openjdk/jfx17u/247
-
Review(master)
openjdk/jfx21u/110
-
Review(master)
openjdk/jfx25u/25
-
Review(master)
openjdk/jfx/1933