8367578: Additional WebKit 622.1 fixes from WebKitGTK 2.48.7

Reviewed-by: kcr, sykora